<resources>
    <string name="app_name">KeepMoving</string>
    <string name="loading">Загрузка…</string>

    <!-- Firebase DB names -->
    <string name="db_user_account">user_account</string>
    <string name="db_user_trip">user_trip</string>
    <string name="db_user_location">user_location</string>

    <!-- String related to Login activity -->
    <string name="log_in">Вход</string>
    <string name="exist_account">Нет аккаунта?</string>
    <string name="create_account">Создать аккаунт</string>
    <string name="email_label">Email</string>
    <string name="password_label">Пароль</string>
    <string name="logout">Выход</string>
    <string name="failed">Прервано</string>

    <!-- String related to SignIn activity -->
    <string name="register">Регистрация</string>
    <string name="name_label">Имя</string>
    <string name="surname_label">Фамилия</string>
    <string name="gender_label">Пол</string>
    <string name="phone_label">Мобильный номер</string>
    <string name="birth_label">Год рождения</string>
    <string name="confirmation_label">Подтверждение</string>
    <string name="description_label">Описание</string>

    <!-- String related to Profile Activity -->
    <string name="profile">Профиль</string>
    <string name="edit">Редактировать</string>
    <string name="editing">Редактирование</string>
    <string name="change_image">Изменить фотографию</string>

    <!-- String related to Picker Activity -->
    <string name="picker_info">Уточнения по поездке</string>
    <string name="departure_date">Дата поездки</string>
    <string name="from_place">Точка отправления</string>
    <string name="where_place">Точка назначения</string>

    <!-- String related to Maps Activity -->
    <string name="title_activity_maps">Карта</string>
    <string name="search">Поиск</string>
    <string name="select_city">Укажите населеный пункт</string>

    <!-- String related to Trip Activities -->
    <string name="car_number">Гос. номер автомобиля</string>
    <string name="car_model">Модель автомобиля</string>
    <string name="trip_description">Подробности поездки</string>
    <string name="trip">Поездка</string>

    <!-- String related to Find Activities -->
    <string name="find_trip">Поиск поездки</string>
    <string name="trip_from">Поездка от : </string>
    <string name="left_arrow"> > </string>

    <string name="trip_send_request">Отправить заявку</string>
    <string name="trip_look_car">Посмотреть местоположение машины</string>
    <string name="trip_departure">Дата поездки : </string>
    <string name="trip_status">Статус поездки : </string>
    <string name="trip_car">Автомобиль : </string>
    <string name="trip_car_number_short">Номер : </string>
    <string name="trip_additional_info">Дополнительная информация</string>
    <string name="trip_cancel">Отменить поездку</string>
    <string name="trip_start">Начать поездку</string>
    <string name="trip_finish">Завершить поездку</string>


    <!-- String related to Requests -->
    <string name="request_from">Заявка от : </string>


    <!-- String related to Photo Activity -->
    <string name="gallery">Галерея</string>
    <string name="photo">Фото</string>
    <string name="camera">Камера</string>
    <string name="open_camera">Открыть камеру</string>
    <string name="next">Далее</string>


    <!-- String related to Main Activity -->
    <string name="no_trip">У Вас пока нет поездок</string>
</resources>
