<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_weight="1"
    android:orientation="horizontal">

    <RelativeLayout
        android:id="@+id/logoLayout"
        android:layout_width="160dp"
        android:layout_height="140dp"
        android:layout_centerHorizontal="true">
        <ImageView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_centerInParent="true"
            android:src="@mipmap/ic_launcher_foreground"
            android:contentDescription="@string/app_name" />
    </RelativeLayout>

    <RelativeLayout
        android:layout_below="@+id/logoLayout"
        android:id="@+id/signInLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true">

        <TextView
            android:id="@+id/signInTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:textColor="#546e7a"
            android:textSize="25sp"
            android:layout_marginBottom="15dp"
            android:text="@string/register" />

        <RelativeLayout
            android:layout_below="@+id/signInTitle"
            android:id="@+id/personNames"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginBottom="5dp"
            android:orientation="horizontal"
            >
            <EditText
                android:id="@+id/surnameInput"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/surname_label"
                android:inputType="textPersonName" />

            <EditText
                android:id="@+id/nameInput"
                android:layout_toRightOf="@+id/surnameInput"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/name_label"
                android:inputType="textPersonName"
                android:layout_toEndOf="@+id/surnameInput" />
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/personInfo"
            android:layout_below="@id/personNames"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginBottom="5dp"
            android:orientation="horizontal"
            >
            <EditText
                android:id="@+id/genderInput"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/gender_label"
                android:inputType="text" />

            <EditText
                android:id="@+id/yearInput"
                android:layout_toRightOf="@+id/genderInput"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/birth_label"
                android:inputType="date"
                android:layout_toEndOf="@+id/genderInput"
                android:onClick="showDatePickerDialog"/>

            <Button
                android:id="@+id/das"
                android:layout_below="@+id/yearInput"
                android:layout_width="180dp"
                android:layout_height="40dp"
                android:layout_marginTop="30dp"
                android:background="@drawable/kp_button"
                android:text="@string/sign_in"
                android:layout_centerHorizontal="true"
                android:textAllCaps="false"
                android:onClick="showDatePickerDialog"/>
        </RelativeLayout>

        <EditText
            android:id="@+id/phoneInput"
            android:layout_below="@+id/personInfo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="5dp"
            android:ems="10"
            android:hint="@string/phone_label"
            android:inputType="phone" />


        <EditText
            android:id="@+id/emailInput"
            android:layout_below="@+id/phoneInput"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="5dp"
            android:ems="10"
            android:hint="@string/email_label"
            android:inputType="textEmailAddress" />

        <EditText
            android:id="@+id/passwordInput"
            android:layout_below="@+id/emailInput"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="5dp"
            android:ems="10"
            android:hint="@string/password_label"
            android:inputType="textPassword" />

        <EditText
            android:id="@+id/confirmationInput"
            android:layout_below="@+id/passwordInput"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_centerHorizontal="true"
            android:ems="10"
            android:hint="@string/confirmation_label"
            android:inputType="textPassword" />

        <Button
            android:id="@+id/button"
            android:layout_below="@+id/confirmationInput"
            android:layout_width="180dp"
            android:layout_height="40dp"
            android:layout_marginTop="30dp"
            android:background="@drawable/kp_button"
            android:text="@string/sign_in"
            android:layout_centerHorizontal="true"
            android:textAllCaps="false"
            android:onClick="signIn"/>
    </RelativeLayout>
</RelativeLayout>
