<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_weight="1">

    <RelativeLayout
        android:layout_width="160dp"
        android:layout_height="160dp"
        android:layout_above="@+id/loginLayout"
        android:layout_centerInParent="true">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_centerInParent="true"
            android:layout_marginBottom="20dp"
            android:src="@mipmap/ic_launcher_foreground" />
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/loginLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true">

        <android.support.design.widget.TextInputLayout
            android:id="@+id/emailWrapper"
            android:layout_width="280dp"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="5dp">

            <EditText
                android:id="@+id/emailInput"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/email_label"
                android:inputType="textEmailAddress" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/passwordWrapper"
            android:layout_width="280dp"
            android:layout_height="wrap_content"
            android:layout_below="@+id/emailWrapper"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp">

            <EditText
                android:id="@+id/passwordInput"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/password_label"
                android:inputType="textPassword" />
        </android.support.design.widget.TextInputLayout>

        <Button
            android:id="@+id/button"
            android:layout_width="150dp"
            android:layout_height="30dp"
            android:layout_below="@+id/passwordWrapper"
            android:layout_centerInParent="true"
            android:layout_marginTop="30dp"
            android:background="@drawable/kp_button"
            android:onClick="login"
            android:text="@string/log_in"
            android:textColor="@color/colorWhite"
            android:textAllCaps="false" />

        <RelativeLayout
            android:id="@+id/signInLayout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/button"
            android:layout_centerInParent="true"
            android:layout_marginTop="30dp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/exist_account" />

            <TextView
                android:id="@+id/signIn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_toRightOf="@+id/textView"
                android:onClick="goSignIn"
                android:text="@string/create_account"
                android:textColor="#80D8FF" />
        </RelativeLayout>
    </RelativeLayout>
</RelativeLayout>
