<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_weight="1"
    android:orientation="horizontal">

    <RelativeLayout
        android:layout_above="@+id/loginLayout"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_centerInParent="true">
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:src="@mipmap/ic_launcher_foreground"/>
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/loginLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true">

        <EditText
            android:id="@+id/emailInput"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:ems="10"
            android:hint="@string/email_label"
            android:inputType="textEmailAddress" />

        <EditText
            android:id="@+id/passwordInput"
            android:layout_below="@+id/emailInput"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:ems="10"
            android:hint="@string/password_label"
            android:inputType="textPassword" />

        <Button
            android:id="@+id/button"
            android:layout_below="@+id/passwordInput"
            android:layout_centerInParent="true"
            android:layout_width="wrap_content"
            android:layout_height="26dp"
            android:layout_marginTop="20dp"
            android:background="@drawable/kp_button"
            android:text="@string/log_in"
            android:textAllCaps="false"
            android:onClick="login"/>


        <RelativeLayout
            android:id="@+id/signInLayout"
            android:layout_below="@id/button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:layout_marginTop="20dp"
            android:orientation="vertical"
            >
            <TextView
                android:id="@+id/textView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/exist_account" />

            <TextView
                android:id="@+id/signIn"
                android:layout_toRightOf="@+id/textView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:text="@string/sign_in"
                android:textColor="#80D8FF" />
        </RelativeLayout>
    </RelativeLayout>
</RelativeLayout>
